--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.4.1",
     "socket.io-client": "^4.8.1",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "vite": "^6.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -32,7 +33,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.2.4"
+    "tailwindcss": "^3.4.17"
   }
 }
