--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,7 @@
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.2.4"
-  },
-  "devDependencies": {
+    "vite": "^6.2.4",
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -34,5 +32,7 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
   }
 }
