--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,29 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.8.4",
-    "chat-app": "file:..",
-    "lucide-react": "^0.484.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^7.4.1",
-    "socket.io-client": "^4.8.1",
-    "zustand": "^5.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.2.4",
     "@eslint/js": "^9.21.0",
+    "@lottiefiles/dotlottie-react": "^0.13.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
+    "browser-image-compression": "^2.0.2",
+    "chat-app": "file:..",
     "daisyui": "^5.0.9",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "lucide-react": "^0.484.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
-  },
-  "devDependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.4.1",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.2.4",
+    "zustand": "^5.0.3"
   }
 }
